--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "sass-loader": "^12.1.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
     "sonar-scanner": "^3.1.0"
   },
   "dependencies": {
